--- a/amap/Point.html
+++ b/amap/Point.html
@@ -45,6 +45,7 @@
     <div id="map"></div>
     <script src="https://webapi.amap.com/maps?v=2.0&key=0ef1e64da79b6a67290d2d0cc1166d44"></script>
     <script src="https://webapi.amap.com/loca?v=2.0.0&key=0ef1e64da79b6a67290d2d0cc1166d44"></script>
+    <script src="../data/余杭区.js"></script>
     <script>
         // 加载地图
         var mainmap=new AMap.Map('map',{
@@ -52,7 +53,7 @@
             center:[119.978873,30.273852], // 设置中心
             zoom:11,
             viewMode:'3D',
-            pitch:pitch,
+            pitch:50,
             showBuildingBlock:true, // 显示3D楼宇
             skyColor:'', // 天空颜色
             showLabel: true, // 是否显示标注
@@ -68,6 +69,7 @@
             zooms: [14, 20],
         });
         // 加载标注
+        var features=Points.features;
         for (var i = features.length-1; i>=0; i--) {
           let item=features[i];
           let name=item.properties.JZMC;
@@ -87,6 +89,7 @@
             }
           });
           labelsLayer.add(labelsMarker);
+        }
         // 将标注层添加到地图上
         mainmap.add(labelsLayer);
 
